--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,26 +1,34 @@
 {
   "name": "@sous/ui",
-  "version": "0.1.0",
-  "main": "index.js",
-  "types": "index.d.ts",
+  "version": "0.0.0",
+  "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
-    "test": "echo \"No tests defined\" && exit 0",
-    "typecheck": "echo 'Placeholder'",
-    "build": "echo 'Placeholder'",
-    "lint": "echo 'Placeholder'"
+    "build": "tsup src/index.ts --format cjs,esm --dts",
+    "dev": "tsup src/index.ts --format cjs,esm --watch --dts",
+    "lint": "eslint src/**/*.ts*"
   },
   "dependencies": {
+    "@rn-primitives/types": "^1.2.0",
+    "@rn-primitives/utils": "^1.2.0",
     "clsx": "^2.1.1",
-    "lucide-react-native": "^0.563.0",
-    "nativewind": "^4.2.1",
-    "react-native": "^0.83.1",
-    "react-native-web": "^0.21.2",
-    "tailwind-merge": "^3.4.0"
+    "lucide-react-native": "^0.474.0",
+    "nativewind": "latest",
+    "react-native": "^0.77.0",
+    "react-native-svg": "^15.15.2",
+    "react-native-svg-web": "^1.0.9",
+    "react-native-web": "^0.19.13",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss": "latest"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.24",
-    "babel-plugin-react-native-web": "^0.21.2",
-    "postcss": "^8.5.6",
-    "tailwindcss": "3.4.17"
+    "@types/react": "^19.0.8",
+    "@types/react-native": "^0.73.0",
+    "tsup": "^8.3.5",
+    "typescript": "^5.7.3"
   }
 }
