fix: fully resolve CLI ESM migration, command nesting, and Ink TUI injection

--- a/apps/cli/tsconfig.json
+++ b/apps/cli/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "module": "nodenext",
-    "moduleResolution": "nodenext",
+    "module": "ESNext",
+    "moduleResolution": "bundler",
     "resolvePackageJsonExports": true,
     "esModuleInterop": true,
     "isolatedModules": true,
@@ -21,9 +21,6 @@
     "forceConsistentCasingInFileNames": true,
     "noImplicitAny": true,
     "strictBindCallApply": true,
-    "noFallthroughCasesInSwitch": true,
-    "paths": {
-      "@sous/config": ["../../packages/config/src"]
-    }
+    "noFallthroughCasesInSwitch": true
   }
 }
