feat: overhaul 'sous dev' with fullscreen Ink TUI, auto-start core, and traffic lights

--- a/apps/cli/package.json
+++ b/apps/cli/package.json
@@ -27,9 +27,11 @@
     "@nestjs/core": "^11.1.13",
     "@nestjs/platform-express": "^11.0.1",
     "@sous/config": "workspace:*",
+    "@sous/logger": "workspace:*",
     "chalk": "^5.6.2",
     "concurrently": "^9.2.1",
     "ink": "^6.6.0",
+    "ink-text-input": "^6.0.0",
     "nest-commander": "^3.20.1",
     "react": "^19.2.4",
     "react-reconciler": "^0.33.0",
