--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@infisical/sdk": "^4.0.6",
+    "@sous/logger": "workspace:*",
     "dotenv": "^17.2.3",
     "zod": "^4.3.6"
   },
