--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "test": "echo \"No tests defined\" && exit 0",
-    "dev": "pnpm dlx tsx ../../scripts/dev-orchestrator.ts docs",
+    "dev": "next dev",
     "build": "next build",
     "typecheck": "tsc --noEmit",
     "start": "next start",
