fix: resolve @sous/web runtime error and stabilize multi-app dependencies

--- a/packages/features/package.json
+++ b/packages/features/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "@sous/client-sdk": "workspace:*",
     "@sous/config": "workspace:*",
+    "@sous/native-bridge": "workspace:*",
     "@sous/ui": "workspace:*",
     "clsx": "^2.1.1",
     "lucide-react": "^0.563.0",
