--- a/apps/pos/package.json
+++ b/apps/pos/package.json
@@ -10,10 +10,20 @@
     "tauri": "tauri"
   },
   "dependencies": {
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
-    "@tauri-apps/api": "^2.2.0",
-    "@tauri-apps/plugin-opener": "^2.2.5"
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "@sous/client-sdk": "workspace:*",
+    "@sous/config": "workspace:*",
+    "@sous/features": "workspace:*",
+    "@sous/logger": "workspace:*",
+    "@sous/ui": "workspace:*",
+    "@tauri-apps/api": "^2",
+    "@tauri-apps/plugin-opener": "^2",
+    "lucide-react-native": "^0.474.0",
+    "react-native": "^0.77.3",
+    "react-native-svg": "^15.15.2",
+    "react-native-svg-web": "^1.0.9",
+    "react-native-web": "^0.19.13"
   },
   "devDependencies": {
     "@types/react": "^19.0.8",
