--- a/.github/workflows/rpi-os-build.yml
+++ b/.github/workflows/rpi-os-build.yml
@@ -33,7 +33,7 @@ jobs:
         run: pnpm install
 
       - name: Build Web Assets
-        run: pnpm --filter @sous/web build
+        run: pnpm turbo run build --filter=@sous/web...
 
       - name: Sync Capacitor Android
         run: npx cap sync android
