chore: trigger CI on workflow changes

--- a/.github/workflows/rpi-os-build.yml
+++ b/.github/workflows/rpi-os-build.yml
@@ -8,6 +8,7 @@ on:
       - "apps/web/**"
       - "packages/**"
       - "scripts/build-rpi-os.sh"
+      - ".github/workflows/**"
 
 jobs:
   build-signage-apk:
