--- a/packages/client-sdk/package.json
+++ b/packages/client-sdk/package.json
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "4.1.18",
+    "@types/node": "^20.19.31",
     "eslint": "^9.39.2",
     "openapi-typescript": "^7.10.1",
     "tailwindcss": "4.1.18",
