--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -27,6 +27,7 @@
   "devDependencies": {
     "@tailwindcss/postcss": "4.1.18",
     "@types/jest": "^30.0.0",
+    "@types/node": "^20.19.31",
     "jest": "^30.2.0",
     "tailwindcss": "4.1.18",
     "ts-jest": "^29.4.6",
