--- a/packages/logger/package.json
+++ b/packages/logger/package.json
@@ -24,6 +24,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "4.1.18",
+    "@types/node": "^20.19.31",
     "tailwindcss": "4.1.18",
     "tsup": "^8.5.1",
     "typescript": "^5.7.3"
