--- a/packages/features/package.json
+++ b/packages/features/package.json
@@ -28,6 +28,7 @@
     "react-dom": "19.2.3"
   },
   "dependencies": {
+    "@apollo/client": "^4.1.4",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
@@ -37,6 +38,7 @@
     "@sous/ui": "workspace:*",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "graphql": "^16.12.0",
     "lucide-react": "^0.563.0",
     "postcss-import": "^16.1.1",
     "radix-ui": "^1.4.3",
