--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -37,8 +37,8 @@
     "postcss-value-parser": "^4.2.0",
     "quick-format-unescaped": "^4.0.4",
     "radix-ui": "^1.4.3",
-    "react": "19.2.3",
-    "react-dom": "19.2.3",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "safe-stable-stringify": "^2.5.0",
     "socket.io-client": "^4.8.1",
     "sonic-boom": "^4.2.0",
