--- a/packages/features/package.json
+++ b/packages/features/package.json
@@ -24,8 +24,8 @@
     "dev": "tsup --watch"
   },
   "peerDependencies": {
-    "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3"
   },
   "dependencies": {
     "@apollo/client": "^4.1.4",
