--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -22,8 +22,8 @@
     "i18next-browser-languagedetector": "^8.2.0",
     "lucide-react": "^0.563.0",
     "radix-ui": "^1.4.3",
-    "react": "19.2.3",
-    "react-dom": "19.2.3",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-i18next": "^16.5.4",
     "tailwind-merge": "^2.6.1",
     "tailwindcss-animate": "^1.0.7"
