--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "prepare": "husky",
     "sous": "infisical run --env=dev --path=/ --projectId=d1c836b9-17fe-49ed-bf45-2966cf2591d2 -- pnpm --filter @sous/cli run start --",
-    "dev-tools": "pnpm sous dev-tools",
+    "dev-tools": "pnpm sous dev",
     "db:up": "docker compose up -d",
     "db:down": "docker compose down",
     "db:reset": "pnpm sous db reset"
