feat: refine installation workflow and developer setup
- Overhaul scripts/install-dev.sh for idempotency and robustness
- Update InstallCommand in @sous/cli to handle packages/config/.env automation
- Add packages/config/.env.example for Infisical bootstrap credentials
- Implement scripts/test-install.sh and install-tester Docker service
- Enhance ProcessManager to proactively manage Docker health
- Update README.md with detailed post-clone instructions

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -109,6 +109,18 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
 
+  # Ephemeral Ubuntu image for testing installation workflow
+  install-tester:
+    image: ubuntu:22.04
+    container_name: sous-install-tester
+    volumes:
+      - .:/home/conar/sous.tools
+      - /var/run/docker.sock:/var/run/docker.sock
+    working_dir: /home/conar/sous.tools
+    environment:
+      - DEBIAN_FRONTEND=noninteractive
+    command: tail -f /dev/null
+
 volumes:
   postgres_data:
   minio_data:
