--- a/Dockerfile.runner
+++ b/Dockerfile.runner
@@ -11,31 +11,25 @@ RUN apt-get update && apt-get install -y \
     build-essential \
     pkg-config \
     libssl-dev \
-    libdbus-1-dev \
-    libwebkit2gtk-4.0-dev \
-    libgtk-3-dev \
-    libappindicator3-dev \
+    libwebkit2gtk-4.1-dev \
     librsvg2-dev \
-    openjdk-17-jdk \
+    openjdk-21-jdk \
     wget \
     && rm -rf /var/lib/apt/lists/*
 
-# Install Rust
-RUN curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
-ENV PATH="/root/.cargo/bin:${PATH}"
-
 # Install Node.js & pnpm
-RUN curl -fsSL https://deb.nodesource.com/setup_20.x | bash - \
+RUN curl -fsSL https://deb.nodesource.com/setup_22.x | bash - \
     && apt-get install -y nodejs \
     && npm install -g pnpm
 
 # Install Android SDK (Basic setup for builds)
 ENV ANDROID_HOME=/opt/android-sdk
 RUN mkdir -p ${ANDROID_HOME}/cmdline-tools \
-    && wget https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip -O /tmp/tools.zip \
-    && unzip /tmp/tools.zip -d ${ANDROID_HOME}/cmdline-tools \
-    && mv ${ANDROID_HOME}/cmdline-tools/cmdline-tools ${ANDROID_HOME}/cmdline-tools/latest \
-    && rm /tmp/tools.zip
+    && wget https://dl.google.com/android/repository/commandlinetools-linux-11076708_latest.zip -O /tmp/tools.zip \
+    && unzip /tmp/tools.zip -d ${ANDROID_HOME}/temp \
+    && mkdir -p ${ANDROID_HOME}/cmdline-tools/latest \
+    && mv ${ANDROID_HOME}/temp/cmdline-tools/* ${ANDROID_HOME}/cmdline-tools/latest/ \
+    && rm -rf /tmp/tools.zip ${ANDROID_HOME}/temp
 
 ENV PATH="${ANDROID_HOME}/cmdline-tools/latest/bin:${ANDROID_HOME}/platform-tools:${PATH}"
 
