--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -95,10 +95,10 @@ services:
       - "traefik.http.routers.redisinsight.rule=Host(`redis.sous.localhost`)"
       - "traefik.http.services.redisinsight.loadbalancer.server.port=5540"
 
-  # GitHub Self-Hosted Runner
-  github-runner:
+  # Universal runner for CI/CD and testing installation workflow
+  installer:
     image: my-github-runner:latest
-    container_name: sous-github-runner
+    container_name: sous-installer
     restart: unless-stopped
     build:
       context: .
@@ -106,20 +106,11 @@ services:
     environment:
       - REPO_URL=${GITHUB_REPO_URL:-}
       - RUNNER_TOKEN=${GITHUB_RUNNER_TOKEN:-}
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
-
-  # Ephemeral Ubuntu image for testing installation workflow
-  install-tester:
-    image: ubuntu:22.04
-    container_name: sous-install-tester
+      - DEBIAN_FRONTEND=noninteractive
     volumes:
       - .:/home/conar/sous.tools
       - /var/run/docker.sock:/var/run/docker.sock
     working_dir: /home/conar/sous.tools
-    environment:
-      - DEBIAN_FRONTEND=noninteractive
-    command: tail -f /dev/null
 
 volumes:
   postgres_data:
