--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -48,6 +48,8 @@
     "thread-stream": "^4.0.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.18.0",
+    "typescript-eslint": "^8.20.0",
     "@capacitor/android": "^8.0.2",
     "@capacitor/assets": "^3.0.5",
     "@capacitor/cli": "^8.0.2",
