--- a/package.json
+++ b/package.json
@@ -29,15 +29,24 @@
     "db:reset": "pnpm sous db reset"
   },
   "devDependencies": {
+    "@eslint/js": "^10.0.1",
+    "@next/eslint-plugin-next": "^16.1.6",
     "@playwright/test": "^1.58.2",
     "@tailwindcss/postcss": "4.1.18",
+    "eslint": "^10.0.0",
+    "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-console": "^0.0.1",
+    "eslint-plugin-prettier": "^5.5.5",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^7.0.1",
+    "globals": "^17.3.0",
     "husky": "^9.1.7",
     "prettier": "latest",
     "tailwindcss": "4.1.18",
     "tsup": "^8.5.1",
     "tsx": "^4.21.0",
-    "turbo": "latest"
+    "turbo": "latest",
+    "typescript-eslint": "^8.55.0"
   },
   "dependencies": {
     "@babel/runtime": "^7.28.6",
