--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "check": "turbo run lint build test",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "prepare": "husky",
-    "sous": "infisical run --env=dev --path=/ --projectId=d1c836b9-17fe-49ed-bf45-2966cf2591d2 -- pnpm --filter @sous/cli run start --",
+    "sous": "pnpm --filter @sous/cli run start --",
     "dev-tools": "pnpm sous dev",
     "db:up": "docker compose up -d",
     "db:down": "docker compose down",
