fix(config): ensure public variables are correctly baked into client bundle during build
- explicitly reference NEXT_PUBLIC_ variables in getPublicEnv for static analysis
- map API_URL to NEXT_PUBLIC_API_URL in next.config.ts and resolveConfig
- avoid defaulting to localhost in non-development environments

--- a/apps/wearos/src/main/AndroidManifest.xml
+++ b/apps/wearos/src/main/AndroidManifest.xml
@@ -32,7 +32,7 @@
                 android:resource="@xml/watch_face" />
             <meta-data
                 android:name="com.google.android.wearable.watchface.preview"
-                android:resource="@drawable/sous_watch_preview" />
+                android:resource="@mipmap/ic_launcher" />
         </service>
 
         <service
@@ -49,7 +49,7 @@
                 android:resource="@xml/watch_face" />
             <meta-data
                 android:name="com.google.android.wearable.watchface.preview"
-                android:resource="@drawable/sous_watch_preview" />
+                android:resource="@mipmap/ic_launcher" />
         </service>
 
         <service
