feat(iam): implement comprehensive user management and auth expansion
- Implement GitHub & Facebook OAuth2 support with unified social validation logic
- Complete User Invitation system with automated emails and token-based registration
- Build full Team Management UI for managers (member listing, role toggling, removal)
- Refactor @sous/config to move toward synchronous resolution and process injection
- Stabilize BullMQ infrastructure and resolve @sous/emails build/type issues
- Perform major documentation audit: supersede 6 ADRs, update core mandates, and establish 10+ new specs
- Launch .gemini/MASTER_PLAN.md for architectural gap tracking

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -42,8 +42,10 @@
     "@nestjs/serve-static": "^5.0.4",
     "@nestjs/swagger": "^11.2.6",
     "@nestjs/websockets": "^11.1.13",
+    "@react-email/components": "^1.0.7",
     "@scalar/nestjs-api-reference": "^1.0.23",
     "@sous/config": "workspace:*",
+    "@sous/emails": "workspace:*",
     "@sous/logger": "workspace:*",
     "@supabase/supabase-js": "^2.94.1",
     "@types/multer": "^2.0.0",
@@ -63,7 +65,10 @@
     "passport-local": "^1.0.0",
     "pg": "^8.18.0",
     "postgres": "^3.4.8",
+    "react": "^19.0.0",
+    "react-email": "^5.2.8",
     "reflect-metadata": "^0.2.2",
+    "resend": "^6.9.2",
     "rxjs": "^7.8.1",
     "sharp": "^0.34.5",
     "socket.io": "^4.8.3",
@@ -84,6 +89,7 @@
     "@types/node": "^22.10.7",
     "@types/passport-local": "^1.0.38",
     "@types/pg": "^8.16.0",
+    "@types/react": "^19.0.8",
     "@types/sharp": "^0.32.0",
     "@types/supertest": "^6.0.2",
     "@types/uuid": "^11.0.0",
