--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -14,8 +14,10 @@
     "generate:icons": "tsx scripts/generate-env-icons.ts"
   },
   "dependencies": {
+    "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-tabs": "^1.1.13",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "i18next": "^25.8.4",
