chore: resolve merge conflicts

--- a/apps/cli/package.json
+++ b/apps/cli/package.json
@@ -26,6 +26,7 @@
     "@nestjs/common": "^11.1.13",
     "@nestjs/core": "^11.1.13",
     "@nestjs/platform-express": "^11.0.1",
+    "@resvg/resvg-js": "^2.6.2",
     "@sous/config": "workspace:*",
     "@sous/logger": "workspace:*",
     "chalk": "^5.6.2",
@@ -38,9 +39,11 @@
     "nest-commander": "^3.20.1",
     "pm2": "^6.0.14",
     "react": "^19.2.3",
+    "react-dom": "^19.2.4",
     "react-reconciler": "^0.33.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.2",
+    "sharp": "^0.34.5",
     "ssh2": "^1.17.0",
     "tree-kill": "^1.2.2"
   },
@@ -59,7 +62,6 @@
     "@types/react-reconciler": "^0.33.0",
     "@types/ssh2": "^1.15.5",
     "@types/supertest": "^6.0.2",
-    "dotenv": "^17.2.3",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.2",
