--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -55,11 +55,11 @@
     "bcrypt": "^6.0.0",
     "bullmq": "^5.67.3",
     "cloudinary": "^2.9.0",
-    "dotenv": "^17.2.3",
     "drizzle-orm": "^0.45.1",
     "graphql": "^16.12.0",
     "graphql-subscriptions": "^3.0.0",
     "ioredis": "^5.9.2",
+    "octokit": "^5.0.5",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
@@ -73,6 +73,7 @@
     "sharp": "^0.34.5",
     "socket.io": "^4.8.3",
     "square": "^44.0.0",
+    "stripe": "^20.3.1",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
@@ -83,9 +84,9 @@
     "@nestjs/testing": "^11.0.1",
     "@tailwindcss/postcss": "4.1.18",
     "@types/bcrypt": "^6.0.0",
-    "@types/dotenv": "^8.2.3",
     "@types/express": "^5.0.0",
     "@types/jest": "^30.0.0",
+    "@types/multicast-dns": "^7.2.4",
     "@types/node": "^22.10.7",
     "@types/passport-local": "^1.0.38",
     "@types/pg": "^8.16.0",
@@ -99,6 +100,7 @@
     "eslint-plugin-prettier": "^5.2.2",
     "globals": "^16.0.0",
     "jest": "^30.0.0",
+    "multicast-dns": "^7.2.5",
     "prettier": "^3.4.2",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
