--- a/apps/cli/tsconfig.json
+++ b/apps/cli/tsconfig.json
@@ -22,5 +22,6 @@
     "noImplicitAny": true,
     "strictBindCallApply": true,
     "noFallthroughCasesInSwitch": true
-  }
+  },
+  "exclude": ["node_modules", "dist", "../../node_modules", "../../apps/api", "../../apps/web", "../../packages/features"]
 }
