--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -6,22 +6,24 @@
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
-      "types": "./dist/index.d.ts",
       "import": "./dist/index.mjs",
       "require": "./dist/index.js"
+    },
+    "./server-utils": {
+      "import": "./dist/server-utils.mjs",
+      "require": "./dist/server-utils.js"
     }
   },
   "scripts": {
     "typecheck": "tsc --noEmit",
-    "build": "tsup src/index.ts --format cjs,esm --dts --clean --external fs,path,dotenv,child_process",
-    "dev": "tsup src/index.ts --format cjs,esm --dts --watch --external fs,path,dotenv,child_process",
+    "build": "tsup src/index.ts src/server-utils.ts --format cjs,esm --dts --clean --external fs,path,child_process,os",
+    "dev": "tsup src/index.ts src/server-utils.ts --format cjs,esm --dts --watch --external fs,path,child_process,os",
     "lint": "echo 'Placeholder'",
     "test": "jest"
   },
   "dependencies": {
     "@infisical/sdk": "^4.0.6",
     "@sous/logger": "workspace:*",
-    "dotenv": "^17.2.3",
     "zod": "^3.25.76"
   },
   "devDependencies": {
