--- a/packages/features/package.json
+++ b/packages/features/package.json
@@ -14,6 +14,11 @@
       "types": "./dist/server.d.ts",
       "import": "./dist/server.mjs",
       "require": "./dist/server.js"
+    },
+    "./constants/plans": {
+      "types": "./dist/constants/plans.d.ts",
+      "import": "./dist/constants/plans.mjs",
+      "require": "./dist/constants/plans.js"
     }
   },
   "files": [
@@ -32,6 +37,7 @@
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
+    "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-slot": "^1.2.4",
     "@sous/client-sdk": "workspace:*",
     "@sous/config": "workspace:*",
@@ -43,13 +49,15 @@
     "postcss-import": "^16.1.1",
     "prismjs": "^1.30.0",
     "radix-ui": "^1.4.3",
+    "react-hook-form": "^7.71.1",
     "react-markdown": "^10.1.0",
     "react-simple-code-editor": "^0.14.1",
     "remark-gfm": "^4.0.1",
     "server-only": "^0.0.1",
     "socket.io-client": "^4.8.1",
     "tailwind-merge": "^2.6.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "4.1.18",
