--- a/packages/logger/package.json
+++ b/packages/logger/package.json
@@ -18,7 +18,9 @@
     "test": "echo \"No tests defined\" && exit 0"
   },
   "dependencies": {
+    "@hyperdx/node-opentelemetry": "^0.10.2",
     "@logtail/pino": "^0.5.7",
+    "@opentelemetry/api": "^1.9.0",
     "pino": "^10.2.0",
     "pino-pretty": "^13.1.3"
   },
