--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -59,6 +59,7 @@
     "graphql": "^16.12.0",
     "graphql-subscriptions": "^3.0.0",
     "ioredis": "^5.9.2",
+    "multicast-dns": "^7.2.5",
     "octokit": "^5.0.5",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
