--- a/apps/cli/tsconfig.build.json
+++ b/apps/cli/tsconfig.build.json
@@ -1,7 +1,9 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "noEmit": false
+    "noEmit": false,
+    "outDir": "./dist"
   },
-  "exclude": ["node_modules", "test", "dist", "**/*spec.ts", "../../apps/api", "../../apps/web", "../../packages/features"]
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "test", "dist", "**/*spec.ts"]
 }
