--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "test": "echo \"No tests defined\" && exit 0",
-    "dev": "next dev --turbo -H 0.0.0.0 -p ${PORT:-3000}",
+    "dev": "next dev --webpack -H 0.0.0.0 -p ${PORT:-3000}",
     "build": "next build --webpack",
     "typecheck": "tsc --noEmit",
     "start": "next start",
@@ -28,6 +28,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "css-in-js-utils": "^3.1.0",
+    "framer-motion": "^12.34.0",
     "graphql": "^16.12.0",
     "hyphenate-style-name": "^1.1.0",
     "lucide-react": "latest",
@@ -48,13 +49,12 @@
     "thread-stream": "^4.0.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.18.0",
-    "typescript-eslint": "^8.20.0",
     "@capacitor/android": "^8.0.2",
     "@capacitor/assets": "^3.0.5",
-    "@capacitor/cli": "^8.0.2",
+    "@capacitor/cli": "^8.1.0",
     "@capacitor/core": "^8.0.2",
     "@capacitor/ios": "^8.0.2",
+    "@eslint/js": "^9.18.0",
     "@tailwindcss/postcss": "^4.1.18",
     "@types/node": "^20",
     "@types/react": "^19.2.13",
@@ -64,6 +64,7 @@
     "eslint-config-next": "16.1.6",
     "postcss": "8.4.31",
     "tailwindcss": "4.1.18",
-    "typescript": "^5"
+    "typescript": "^5",
+    "typescript-eslint": "^8.20.0"
   }
 }
