--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -18,6 +18,8 @@
     "jsx": "react-jsx",
     "jsxImportSource": "react",
     "incremental": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
     "plugins": [
       {
         "name": "next"
