--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
   "pnpm": {
     "overrides": {
       "react": "^19.2.4",
-      "react-dom": "^19.2.4"
+      "react-dom": "^19.2.4",
+      "axios": "^1.13.5",
+      "prismjs": "^1.30.0",
+      "@smithy/config-resolver": "^4.4.0",
+      "qs": "^6.14.2"
     },
     "onlyBuiltDependencies": [
       "sharp"
