--- a/packages/features/package.json
+++ b/packages/features/package.json
@@ -16,10 +16,7 @@
       "require": "./dist/server.js"
     },
     "./constants/plans": {
-      "types": {
-        "import": "./dist/constants/plans.d.mts",
-        "require": "./dist/constants/plans.d.ts"
-      },
+      "types": "./dist/constants/plans.d.ts",
       "import": "./dist/constants/plans.mjs",
       "require": "./dist/constants/plans.js"
     }
@@ -28,7 +25,7 @@
     "dist"
   ],
   "scripts": {
-    "build": "tsup",
+    "build": "rm -rf dist && tsup",
     "dev": "tsup --watch"
   },
   "peerDependencies": {
@@ -47,6 +44,7 @@
     "@sous/ui": "workspace:*",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.34.0",
     "graphql": "^16.12.0",
     "lucide-react": "^0.563.0",
     "postcss-import": "^16.1.1",
