feat(signage,kds): migrate signage to graphql subscriptions and refactor layout designer
- Refactored LayoutDesigner into a modular component structure with framer-motion animations
- Implemented real-time Signage updates via GraphQL Subscriptions
- Fixed TypeError in PresentationService by hardening timestamp handling
- Added 'Show Completed' toggle and history view to KDS Feature
- Automated Display entry creation during Signage hardware pairing
- Fixed build errors in PresentationResolver and hardened Auth Guards
- Cleaned up UI artifacts (dashed borders/labels) in live signage view

--- a/branding.config.json
+++ b/branding.config.json
@@ -4,11 +4,24 @@
   "apple-touch-icon": { "variant": "neon", "size": 180, "props": {} },
   "android-chrome-192": { "variant": "neon", "size": 192, "props": {} },
   "android-chrome-512": { "variant": "neon", "size": 512, "props": {} },
-  "android-adaptive-foreground": { "variant": "neon", "size": 512, "props": { "animate": false } },
-  "ios-app-icon": { "variant": "neon", "size": 1024, "props": { "animate": false } },
-  "wearos-app-icon": { "variant": "neon", "size": 512, "props": { "animate": false } },
+  "android-adaptive-foreground": {
+    "variant": "neon",
+    "size": 512,
+    "props": { "animate": false }
+  },
+  "ios-app-icon": {
+    "variant": "neon",
+    "size": 1024,
+    "props": { "animate": false }
+  },
+  "wearos-app-icon": {
+    "variant": "neon",
+    "size": 512,
+    "props": { "animate": false }
+  },
   "pos-logo": { "variant": "pos", "size": 512, "props": {} },
   "kds-logo": { "variant": "kds", "size": 512, "props": {} },
   "signage-logo": { "variant": "signage", "size": 512, "props": {} },
-  "api-logo": { "variant": "api", "size": 512, "props": {} }
+  "api-logo": { "variant": "api", "size": 512, "props": {} },
+  "kiosk-logo": { "variant": "pos", "size": 512, "props": {} }
 }
