--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,8 @@
 INFISICAL_PROJECT_ID=d1c836b9-17fe-49ed-bf45-2966cf2591d2
 INFISICAL_CLIENT_ID=
 INFISICAL_CLIENT_SECRET=
+
+# GitHub Runner Configuration
+# Get a token from: https://github.com/conarwelsh/sous.tools/settings/actions/runners/new
+GITHUB_REPO_URL=https://github.com/conarwelsh/sous.tools
+GITHUB_RUNNER_TOKEN=
