--- a/packages/features/package.json
+++ b/packages/features/package.json
@@ -41,6 +41,7 @@
     "@radix-ui/react-slot": "^1.2.4",
     "@sous/client-sdk": "workspace:*",
     "@sous/config": "workspace:*",
+    "@sous/logger": "workspace:*",
     "@sous/ui": "workspace:*",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
